--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -2,6 +2,8 @@
 layout: base.njk
 ---
 
-<h1>{{ title }}</h1>
 
-{{ content | safe }}
+<section class="markdown-body">
+	<h1>{{ title }}</h1>
+	{{ content | safe }}
+</section>
